--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
     </div>
 
     <p>
-      I am a PhD Research Scholar at the Indian Institute of Technology Delhi, working in the interdisciplinary domain of Additive Manufacturing and Fiber-reinforced Composites. I have been studying at IIT Delhi since August 2021. I have expertise in X-ray micro computed tomography (microCT), scanning electron microscopy (SEM), and mechanical characterization.<br><br>
-      I am also learning to work with machine learning algorithms to develop predictive models for estimating the mechanical properties of printed composites. Unlike traditional approaches, I aim to implement advanced deep learning techniques (such as convolutional neural networks and recurrent architectures) that can process image-based data from microCT or SEM to directly predict material performance. This addresses the research gap of correlating internal microstructural features with composite properties using spatially-aware learning methods, which is currently underexplored in 3D printed fiber-reinforced composites.
+      I am a PhD Research Scholar at Indian Institute of Technology Delhi, working in the interdisciplinary domain of Additive Manufacturing and Fiber-Reinforced Polymer Composites. My research focuses on exploring the relationships between process parameters, microstructure, and mechanical performance of advanced composite materials fabricated through state-of-the-art 3D printing techniques. I have been affiliated with IIT Delhi since August 2021, and my academic journey here has allowed me to blend experimental and computational methodologies to solve real-world engineering problems.
+
+I possess hands-on expertise in advanced material characterization techniques such as X-ray micro-computed tomography (microCT), scanning electron microscopy (SEM), and various mechanical testing methods including tensile, flexural, compression, fatigue, impact, and dynamic mechanical analysis. I am passionate about applying these tools to understand internal defects, porosity, and fracture behavior of polymer composites under diverse loading conditions. I am also learning to work with ML algorithms to develop predictive models for estimating the mechanical properties of printed composites. I am open for collaboration with researchers working in ML.
+
+My long-term goal is to contribute to the development of lightweight, high-performance materials for applications in aerospace, automotive, biomedical, and defense industries. I actively collaborate across disciplines and am driven by curiosity, scientific rigor, and a desire to innovate in the field of advanced manufacturing technologies.
     </p>
   </div>
 </body>
