--- a/index.html
+++ b/index.html
@@ -1,88 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Dushyant Dubey - Home</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Consolas, monospace;
-      background-color: #ffffff;
-      color: #000;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    .header {
-      font-size: 4em;
-      color: blue;
-      font-weight: bold;
-      margin-top: 60px;
-    }
-
-    .top-left {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      width: 80px;
-    }
-
-    .top-right {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      width: 80px;
-      border-radius: 8px;
-    }
-
-    .image-row {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 40px 0;
-    }
-
-    .image-row img {
-      width: 250px;
-      border-radius: 6px;
-    }
-
-    p {
-      text-align: justify;
-      font-size: 1.1em;
-      line-height: 1.6;
-      margin-top: 20px;
-    }
-  </style>
+  <meta charset="utf-8">
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=https://dushyant-dubey.onrender.com">
+  <script>
+    window.location.href = "https://dushyant-dubey.onrender.com";
+  </script>
 </head>
 <body>
-  <img src="image2.png" alt="IIT Delhi Logo" class="top-left">
-  <img src="image1.jpeg" alt="Profile Picture" class="top-right">
-
-  <div class="container">
-    <div class="header">DUSHYANT DUBEY</div>
-
-    <div class="image-row">
-      <img src="image1.jpeg" alt="Image 1">
-      <img src="image3.jpeg" alt="Image 3">
-      <img src="image4.jpeg" alt="Image 4">
-    </div>
-
-    <p>
-      I am a PhD Research Scholar at Indian Institute of Technology Delhi, working in the interdisciplinary domain of Additive Manufacturing and Fiber-Reinforced Polymer Composites. My research focuses on exploring the relationships between process parameters, microstructure, and mechanical performance of advanced composite materials fabricated through state-of-the-art 3D printing techniques. I have been affiliated with IIT Delhi since August 2021, and my academic journey here has allowed me to blend experimental and computational methodologies to solve real-world engineering problems.
-</p>
-    <p>
-I possess hands-on expertise in advanced material characterization techniques such as X-ray micro-computed tomography (microCT), scanning electron microscopy (SEM), and various mechanical testing methods including tensile, flexural, compression, fatigue, impact, and dynamic mechanical analysis. I am passionate about applying these tools to understand internal defects, porosity, and fracture behavior of polymer composites under diverse loading conditions. I am also learning to work with ML algorithms to develop predictive models for estimating the mechanical properties of printed composites. I am open for collaboration with researchers working in ML.
-</p>
-      <p>
-My long-term goal is to contribute to the development of lightweight, high-performance materials for applications in aerospace, automotive, biomedical, and defense industries. I actively collaborate across disciplines and am driven by curiosity, scientific rigor, and a desire to innovate in the field of advanced manufacturing technologies.
-    </p>
-  </div>
+  <p>If you are not redirected, <a href="https://dushyant-dubey.onrender.com">click here</a>.</p>
 </body>
 </html>
